--- a/readme
+++ b/readme
@@ -1,1 +1,14 @@
 # HIFI Q30 SSU Sequences
+
+## Q30 reads
+
+### Extracting reads from ```BAM``` files
+
+```bash
+```
+
+### Extracting reads from ```FASTQ``` files
+```bash
+
+```
+
